--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-html {
+* {
     font-family: "Poppins", sans-serif !important;
+    padding: 0px;
+    margin: 0px;
 }
 
 .logo {
@@ -12,4 +14,24 @@ html {
 .header-profile {
     border-radius: 50%;
     margin-left: -4px;
+}
+
+.banner video {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    position: absolute;
+}
+
+.banner > div {
+    background-color: #00000080;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    position: absolute;
+    z-index: 50;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
