--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
     font-family: "Poppins", sans-serif !important;
     padding: 0px;
     margin: 0px;
+    text-decoration: none;
 }
 
 .title-divider {
